--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   </head>
   <body>
     <header>
-      <h1>П'ята домашка по JS!</h1>
+      <h1>Вже шоста домашка по JS! Екватор!</h1>
     </header>
     <section class="wrapper">
       <div>
