add tasc conditions

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
     <script src="./js/task-1.js"></script>
     <script src="./js/task-2.js"></script>
     <script src="./js/task-3.js"></script>
-    <script src="./js/task-4.js"></script>
+    <!-- <script src="./js/task-4.js"></script> -->
     <!-- <script src="./js/script.js"></script> -->
   </body>
 </html>
